@@ -1,3 +1,9 @@
+2003-09-15  Carl Worth  <cworth@isi.edu>
+
+	* src/cairo.c (cairo_restore): Fix to catch invalid restore rather
+	than just catching the second invalid restore. Fix from Keith
+	Packard <keithp@keithp.com>.
+
 2003-09-12  Carl Worth  <cworth@east.isi.edu>
 
 	* src/cairo_surface.c (cairo_surface_create_similar_solid): Don't
